--- a/css/_base.scss
+++ b/css/_base.scss
@@ -18,10 +18,10 @@ $font-e2: "Mansalva", cursive;
 @mixin title-1 {
   color: $main-color1;
   font-family: $font-j1;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 1.5rem;
   text-align: center;
-}
+
 
 /*-------------- レイアウト ----------------*/
 
