--- a/css/_base.scss
+++ b/css/_base.scss
@@ -18,8 +18,8 @@ $font-e2: "Mansalva", cursive;
 @mixin title-1 {
   color: $main-color1;
   font-family: $font-j1;
-  font-weight: normal;
-  font-size: 1.5rem;
+  font-weight: bold;
+  font-size: 1.3rem;
   text-align: center;
 
 
