Auto stash beCSSfore merge of "master" and "develop"

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ html {
 }
 
 body {
-  color: #333;
+  color: #bebebe;
   font-size: 1.2rem;
   line-height: 2;
   font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
