--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  color: #333;
+  color: #bebebe;
   font-size: 1.2rem;
   line-height: 2;
   font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
