--- a/css/_base.scss
+++ b/css/_base.scss
@@ -6,6 +6,13 @@ $base-color2: #8d8d8e;
 $base-color3: #d0d0d0;
 $base-color4: #f5f6f7;
 
+//UNDERLINE
+$baseu-color1: #3b3b3b;
+$baseu-color2: #333333;
+$baseu-color3: #676767;
+$baseu-color4: #a5a5a5;
+$baseu-color5: #eceaeb;
+
 $main-color1: #24bddc;
 $main-color2: #76d9e8;
 $main-color3: #c7f5f5;
